--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.servlet.context-path=/sales-management
 server.port=8081
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 spring.datasource.url=jdbc:mysql://localhost:3306/code9-books
 spring.datasource.username=root
 spring.datasource.password=
