--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 server.servlet.context-path=/sales-management
 server.port=8081
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/code9-books
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/code9-books?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #Eureka config
 spring.application.name=code9-book-sales-service
